--- a/server/public/account.html
+++ b/server/public/account.html
@@ -49,10 +49,14 @@
             <h3>Measurement Data</h3>
             <button id="btnFetchAll">Fetch All Data</button>
             <button id="btnFetchRecent">Fetch Recent Measurements</button>
-            <button id="btnViewTrends">View Trends</button>
         </div>
     </div>
 
+    <div id="recentMeasurementDisplay" style="margin-bottom: 20px; padding: 10px; border: 1px solid #ddd; background-color: #f9f9f9;">
+        <h4>Most Recent Measurement</h4>
+        <p>Waiting for data...</p>
+    </div>
+    
     <div style="display:inline-block; width:45vw; height: 60vh; margin: 2vh 20vw;">
         <label for="rxData">Response: </label>
         <textarea id="rxData" style="width:100%; height:100%"></textarea>
