--- a/server/public/account.html
+++ b/server/public/account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Heart Track - IoT Device Data</title>
+    <title>Account</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -10,56 +10,22 @@
 </head>
 <body>
     <div class="container">
-        <a href="index.html" class="left brand-logo valign-wrapper">Home</a>
-        <br />
-        <h1>Heart Track Dashboard</h1>
-        <br />
-
+        <h1>Account Management</h1>
         <div>
-            <h3>Account Management</h3>
-            <div>
-                <label for="username">Username: </label>
-                <input type="text" id="username" placeholder="Enter username" name="username">
-            </div>
-            <div>
-                <label for="password">Password: </label>
-                <input type="password" id="password" placeholder="Enter password" name="password">
-            </div>
-            <br />
-            <button id="btnRegister">Register</button>
-            <button id="btnLogin">Login</button>
+            <h3>Welcome, <span id="userEmailDisplay"></span></h3>
         </div>
-
-        <hr />
-
-        <div>
-            <h3>Device Management</h3>
-            <div>
-                <label for="deviceId">Device ID: </label>
-                <input type="text" id="deviceId" placeholder="Enter device ID" name="deviceId">
-            </div>
-            <br />
-            <button id="btnRegisterDevice">Register Device</button>
-            <button id="btnViewDeviceData">View Device Data</button>
-        </div>
-
-        <hr />
-
-        <div>
-            <h3>Measurement Data</h3>
-            <button id="btnFetchAll">Fetch All Data</button>
-            <button id="btnFetchRecent">Fetch Recent Measurements</button>
-        </div>
+        <button onclick="location.href='update-password.html'">Update Password</button>
+        <button onclick="location.href='devices.html'">Manage Devices</button>
+        <br /><br />
+        <button id="btnLogout">Logout</button>
     </div>
 
-    <div id="recentMeasurementDisplay" style="margin-bottom: 20px; padding: 10px; border: 1px solid #ddd; background-color: #f9f9f9;">
-        <h4>Most Recent Measurement</h4>
-        <p>Waiting for data...</p>
-    </div>
-    
-    <div style="display:inline-block; width:45vw; height: 60vh; margin: 2vh 20vw;">
-        <label for="rxData">Response: </label>
-        <textarea id="rxData" style="width:100%; height:100%"></textarea>
-    </div>
+    <!-- JavaScript to initialize functionality -->
+    <script>
+        $(document).ready(() => {
+            checkAuth(); // Ensure the user is authenticated
+            displayUserEmail(); // Display the email
+        });
+    </script>
 </body>
 </html>
