--- a/server/public/update-password.html
+++ b/server/public/update-password.html
@@ -10,15 +10,18 @@
 </head>
 <body>
     <div class="container">
-        <h1>Update Password</h1>
-        <div>
-            <label for="newPassword">New Password: </label>
-            <input type="password" id="newPassword" placeholder="Enter new password" name="newPassword">
+        <h1 class="text-center">Update Password</h1>
+        <div class="form-group">
+            <label for="newPassword">New Password:</label>
+            <input type="password" id="newPassword" class="form-control" placeholder="Enter new password">
+        </div>
+        <div class="text-center">
+            <button id="btnUpdatePassword" class="btn btn-primary">Update Password</button>
         </div>
         <br />
-        <button id="btnUpdatePassword">Update Password</button>
-        <br /><br />
-        <button onclick="location.href='account.html'">Back to Account</button>
+        <div class="text-center">
+            <button onclick="location.href='account.html'" class="btn btn-secondary">Back to Account</button>
+        </div>
     </div>
 </body>
 </html>
