--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <!--Import Google Icon Font-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="stylesheets/site.css" rel="stylesheet">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECE 413/513 - Fall 2022</title>
 </head>
 <body>
@@ -31,8 +27,7 @@
                             <a href="login.html" class="collection-item">Create Account or Sign In</a>
                         </div>
                         <p>
-                            Heart Track is a low-cost IoT-enabled web application for monitoring heart rate and blood oxygen saturation levels.
-                            It supports real-time data transmission and visualization via a responsive interface.
+                            Heart Track is a low-cost IoT-enabled web application for monitoring heart rate and blood oxygen saturation levels. It supports real-time data transmission and visualization via a responsive interface.
                         </p>
                         <h5>Team Members</h5>
                         <div class="row">
@@ -70,8 +65,6 @@
                                 </div>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
