fixed some frontend

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,6 +13,10 @@
     <nav class="nav-wrapper bg-az-blue lighten-4" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="index.html" class="left brand-logo valign-wrapper">Home</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="login.html">Create Account or Sign In</a></li>
+                <li><a href="reference.html">References</a></li>
+            </ul>
         </div>
     </nav>
 
