--- a/server/public/devices.html
+++ b/server/public/devices.html
@@ -10,6 +10,19 @@
     <script src="javascripts/hearttrack.js"></script>
 </head>
 <body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="account.html">Account Menu</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right" id="nav-menu">
+                <li>
+                    <a href="#" id="btnLogout" class="navbar-link">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
         <h1 class="text-center">Device Management</h1>
 
@@ -104,9 +117,6 @@
         </div>
 
         <br />
-        <div class="text-center">
-            <button onclick="location.href='account.html'" class="btn btn-secondary">Back to Account</button>
-        </div>
     </div>
 
     <!-- JavaScript Initialization -->
