--- a/server/public/update-password.html
+++ b/server/public/update-password.html
@@ -9,6 +9,19 @@
     <script src="javascripts/hearttrack.js"></script>
 </head>
 <body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="account.html">Account Menu</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right" id="nav-menu">
+                <li>
+                    <a href="#" id="btnLogout" class="navbar-link">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
         <h1 class="text-center">Update Password</h1>
         <div class="form-group">
@@ -19,9 +32,6 @@
             <button id="btnUpdatePassword" class="btn btn-primary">Update Password</button>
         </div>
         <br />
-        <div class="text-center">
-            <button onclick="location.href='account.html'" class="btn btn-secondary">Back to Account</button>
-        </div>
     </div>
 </body>
 </html>
