--- a/server/public/devices.html
+++ b/server/public/devices.html
@@ -116,7 +116,12 @@
             </div>
         </div>
 
-        <br />
+        <br/>
+
+        <div style="display:inline-block; width:45vw; height: 60vh; margin: 2vh 20vw;">
+            <label for="rxData">Response: </label>
+            <textarea id="rxData" style="width:100%; height:100%"></textarea>
+        </div>
     </div>
 
     <!-- JavaScript Initialization -->
