reorganzied the code

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -38,7 +38,7 @@
                             <div class="col s12 m4">
                                 <div class="card">
                                     <div class="card-image">
-                                        <img src="DasolPhoto.png" alt="Dasol Ahn">
+                                        <img src="res/DasolPhoto.png" alt="Dasol Ahn">
                                     </div>
                                     <div class="card-content">
                                         <h6>Dasol Ahn</h6>
@@ -49,7 +49,7 @@
                             <div class="col s12 m4">
                                 <div class="card">
                                     <div class="card-image">
-                                        <img src="AlexPhoto.png" alt="Alex Romero">
+                                        <img src="res/AlexPhoto.png" alt="Alex Romero">
                                     </div>
                                     <div class="card-content">
                                         <h6>Alex Romero</h6>
@@ -60,7 +60,7 @@
                             <div class="col s12 m4">
                                 <div class="card">
                                     <div class="card-image">
-                                        <img src="MasonPhoto.jpg" alt="Mason Marrero">
+                                        <img src="res/MasonPhoto.jpg" alt="Mason Marrero">
                                     </div>
                                     <div class="card-content">
                                         <h6>Mason Marrero</h6>
