--- a/server/public/update-password.html
+++ b/server/public/update-password.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="javascripts/hearttrack.js"></script>
+    <script src="javascripts/account.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-default">
