git ignore wasnt working

--- a/server/public/devices.html
+++ b/server/public/devices.html
@@ -34,7 +34,7 @@
                 <h3>Manage Devices</h3>
 
                 <!-- Table for Unclaimed Devices -->
-                <h4>Unclaimed Devices</h4>
+                <h4>Unclaimed Devices On Network</h4>
                 <table id="unclaimedDevicesTable" class="table table-striped">
                     <thead>
                         <tr>
