--- a/server/public/devices.html
+++ b/server/public/devices.html
@@ -33,21 +33,6 @@
             <div class="col-xs-12">
                 <h3>Manage Devices</h3>
 
-                <!-- Table for Unclaimed Devices -->
-                <h4>Unclaimed Devices On Network</h4>
-                <table id="unclaimedDevicesTable" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Device ID</th>
-                            <th>Register Date</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Unclaimed devices will be dynamically populated here -->
-                    </tbody>
-                </table>
-
                 <!-- Table for User-Owned Devices -->
                 <h4>Your Devices</h4>
                 <table id="userDevicesTable" class="table table-striped">
@@ -62,10 +47,16 @@
                         <!-- User-owned devices will be dynamically populated here -->
                     </tbody>
                 </table>
-
-                <div class="text-center">
-                    <button id="btnRefreshDevices" class="btn btn-primary">Refresh Devices</button>
+                
+                <!-- Search and Claim Unclaimed Devices -->
+                <h4>Search for Unclaimed Devices</h4>
+                <div class="form-group">
+                    <label for="searchDeviceId">Device ID:</label>
+                    <input type="text" id="searchDeviceId" class="form-control" placeholder="Enter Device ID">
                 </div>
+                <button id="btnSearchUnclaimedDevice" class="btn btn-primary">Search & Claim</button>
+                <div id="searchResult" class="mt-3"></div>
+
             </div>
         </div>
         <hr />
@@ -79,7 +70,9 @@
                 <!-- Filter Section -->
                 <div class="form-group">
                     <label for="measurementDeviceId">Device ID:</label>
-                    <input type="text" id="measurementDeviceId" class="form-control" placeholder="Enter device ID">
+                    <select id="measurementDeviceId" class="form-control">
+                        <!-- Options will be dynamically populated by JavaScript -->
+                    </select>
                 </div>
 
                 <div class="form-group">
