starting on physicians

--- a/server/public/account.html
+++ b/server/public/account.html
@@ -26,9 +26,12 @@
     <!-- Account Management -->
     <div class="container">
         <h1 class="text-center">Account Management</h1>
+    
         <div class="text-center">
             <h3>Welcome, <span id="userEmailDisplay"></span></h3>
+            <h4 id="accountTypeDisplay" class="text-muted"></h4> <!-- Placeholder for account type -->
         </div>
+        
         <div class="text-center">
             <button onclick="location.href='update-password.html'" class="btn btn-primary">Update Password</button>
             <button onclick="location.href='devices.html'" class="btn btn-info">Manage Devices</button>
