--- a/server/public/index.html
+++ b/server/public/index.html
@@ -28,8 +28,8 @@
                         <h4 class="blue-text text-darken-4">Heart Track: An IoT-enabled Web Application</h4>
                         <h5>ECE 513 Project</h5>
                         <div class="collection">
-                            <a href="login.html" class="collection-item">Create Account or Sign In</a>
-                        </div>
+                            <a href="login.html" class="collection-item">Sign in as Patient</a>
+                            <a href="login.html" class="collection-item">Sign in as Physician</a>                        </div>
                         <p>
                             Heart Track is a low-cost IoT-enabled web application for monitoring heart rate and blood oxygen saturation levels. It supports real-time data transmission and visualization via a responsive interface.
                         </p>
