--- a/server/public/login.html
+++ b/server/public/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="javascripts/register.js"></script>
+    <script type="module" src="javascripts/login.js"></script>
 </head>
 <body>
     <!-- Navbar -->
@@ -26,7 +26,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-6 col-md-offset-3">
-                <h1 class="text-center">Login</h1>
+                <!-- Role-Specific Header -->
+                <h1 id="roleHeader" class="text-center">Login</h1>
                 <form>
                     <div class="form-group">
                         <label for="email">Email:</label>
@@ -36,6 +37,9 @@
                         <label for="password">Password:</label>
                         <input type="password" class="form-control" id="password" placeholder="Enter password">
                     </div>
+                    <!-- Hidden input to store role -->
+                    <input type="hidden" id="userRole" value="">
+
                     <div class="text-center">
                         <button type="button" id="btnLogin" class="btn btn-primary">Login</button>
                         <button type="button" id="btnRegister" class="btn btn-secondary">Register</button>
