--- a/server/public/devices.html
+++ b/server/public/devices.html
@@ -194,5 +194,16 @@
             checkAuth(); // Ensure the user is authenticated
         });
     </script>
+
+    <script type="module">
+        import { logoutUser } from './javascripts/logout.js';
+
+        // Attach the logout functionality
+        document.getElementById('btnLogout').addEventListener('click', (e) => {
+            e.preventDefault(); // Prevent default link behavior
+            logoutUser();
+        });
+    </script>
+    
 </body>
 </html>
