--- a/server/public/account.html
+++ b/server/public/account.html
@@ -44,6 +44,14 @@
             <button id="btnAssignPhysician" class="btn btn-success">Assign Physician</button>
         </div>
         
+        <!-- New Section for Displaying Currently Assigned Physicians -->
+        <div class="form-group mt-4">
+            <h4>Currently Assigned Physicians</h4>
+            <ul id="assignedPhysiciansList" class="list-group">
+                <!-- List of assigned physicians will be dynamically populated -->
+            </ul>
+        </div>
+
         <div class="text-center">
             <button onclick="location.href='update-password.html'" class="btn btn-primary">Update Password</button>
             <button onclick="location.href='devices.html'" class="btn btn-info">Manage Devices</button>
