everything works, moving on to physician

--- a/server/public/account.html
+++ b/server/public/account.html
@@ -54,9 +54,13 @@
 
         <div class="text-center">
             <button onclick="location.href='update-password.html'" class="btn btn-primary">Update Password</button>
-            <button onclick="location.href='devices.html'" class="btn btn-info">Manage Devices</button>
         </div>
         <br />
+        
+        <div class="text-center">
+            <button onclick="location.href='devices.html'" class="btn btn-info">Go to Device Portal</button>
+        </div>
+
     </div>
 
     <!-- JavaScript Initialization -->
