hides patient stuff physcian account too

--- a/server/public/account.html
+++ b/server/public/account.html
@@ -32,7 +32,7 @@
             <h4 id="accountTypeDisplay" class="text-muted"></h4> <!-- Placeholder for account type -->
         </div>
 
-        <div class="form-group">
+        <div class="form-group patient-view" >
             <label for="physicianSelect">Select Your Physician:</label>
             <select id="physicianSelect" class="form-control">
                 <option value="">Select a physician...</option>
@@ -40,12 +40,12 @@
             </select>
         </div>
 
-        <div class="text-center">
+        <div class="text-center patient-view">
             <button id="btnAssignPhysician" class="btn btn-success">Assign Physician</button>
         </div>
         
         <!-- New Section for Displaying Currently Assigned Physicians -->
-        <div class="form-group mt-4">
+        <div class="form-group mt-4 patient-view">
             <h4>Currently Assigned Physicians</h4>
             <ul id="assignedPhysiciansList" class="list-group">
                 <!-- List of assigned physicians will be dynamically populated -->
