--- a/server/public/devices.html
+++ b/server/public/devices.html
@@ -49,7 +49,7 @@
                 </table>
                 
                 <!-- Search and Claim Unclaimed Devices -->
-                <h4>Search for Unclaimed Devices</h4>
+                <h5 id="searchUnclaimedLabel">Search for Unclaimed Devices</h4>
                 <div class="form-group">
                     <label for="searchDeviceId">Device ID:</label>
                     <input type="text" id="searchDeviceId" class="form-control" placeholder="Enter Device ID">
@@ -204,6 +204,6 @@
             logoutUser();
         });
     </script>
-    
+
 </body>
 </html>
