displaying patient emails in physician view

--- a/server/public/devices.html
+++ b/server/public/devices.html
@@ -39,8 +39,7 @@
                     <thead>
                         <tr>
                             <th>Device ID</th>
-                            <th>Register Date</th>
-                            <th>Actions</th>
+                            <th>Actions/Information</th>
                         </tr>
                     </thead>
                     <tbody>
